--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <div class="wrapper">
       <header class="header-section">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark container">
+        <nav class="navbar navbar-expand-lg bg-custom container">
           <button
             class="navbar-toggler"
             type="button"
@@ -38,7 +38,10 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"
+              ><img
+                src="https://img.icons8.com/ultraviolet/40/000000/xbox-menu.png"
+            /></span>
           </button>
           <a class="navbar-brand" href="#"
             ><img
@@ -75,7 +78,7 @@
             <li class="timer-list"><span id="days"></span>Days</li>
             <li class="timer-list"><span id="hours"></span>Hours</li>
             <li class="timer-list"><span id="minutes"></span>Minutes</li>
-            <li class="timer-list"><span id="seconds"></span>Seconds</li>
+            <li class="timer-list second"><span id="seconds"></span>Seconds</li>
           </ul>
         </div>
         <div class="header-main">
@@ -91,23 +94,35 @@
         <h1 class="theme-header">THEME</h1>
         <div class="row justify-content-center">
           <div class="col-sm-12 col-md-3 theme-card">
+            <div class="text-center">
+              <img src="extc.svg" alt="" class="theme-img" />
+            </div>
             <h4 class="text-center theme-card-header">
               EXTC/ ETRX/ BIOMEDICAL/ ELECTRICAL & ELECTRONICS
             </h4>
           </div>
           <div class="col-sm-12 col-md-3 theme-card">
+            <div class="text-center">
+              <img src="it.svg" alt="" class="theme-img" />
+            </div>
             <h4 class="text-center theme-card-header">
               CS/IT/ELECTRONICS & CS
             </h4>
           </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center card-row2">
           <div class="col-sm-12 col-md-3 theme-card">
+            <div class="text-center">
+              <img src="mech.svg" alt="" class="theme-img" />
+            </div>
             <h4 class="text-center theme-card-header">
               MECHANICAL / MECHATRONICS / AUTOMOBILES / PRODUCTION
             </h4>
           </div>
           <div class="col-sm-12 col-md-3 theme-card">
+            <div class="text-center">
+              <img src="civil.svg" alt="" class="theme-img" />
+            </div>
             <h4 class="text-center theme-card-header">
               CIVIL / STRUCTURAL / ENVIRONMENT/ ARCHITECHTURE
             </h4>
@@ -330,17 +345,17 @@
                 <span
                   ><img
                     src="https://img.icons8.com/office/30/000000/user-male-circle.png"/></span
-                >&nbsp; Bhaktij Koli : +91 7710848662
+                >&nbsp; Bhaktij Koli : <span class="number-span">+91 7710848662</span>
               </h4>
               <h4>
                 <img
                   src="https://img.icons8.com/office/30/000000/user-male-circle.png"
-                />&nbsp;Abhishek Jaiswal : +91 8419925905
+                />&nbsp;Abhishek Jaiswal : <span class="number-span">+91 8419925905</span>
               </h4>
               <h4>
                 <img
                   src="https://img.icons8.com/office/30/000000/user-male-circle.png"
-                />&nbsp;Aditya Malviya : +91 7021998679
+                />&nbsp;Aditya Malviya : <span class="number-span"> +91 7021998679</span>
               </h4>
             </div>
           </div>
