--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="#rules">Rules</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="#sponsor">Sponsors</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact Us</a>
               </li>
@@ -345,17 +345,20 @@
                 <span
                   ><img
                     src="https://img.icons8.com/office/30/000000/user-male-circle.png"/></span
-                >&nbsp; Bhaktij Koli : <span class="number-span">+91 7710848662</span>
+                >&nbsp; Bhaktij Koli :
+                <span class="number-span">+91 7710848662</span>
               </h4>
               <h4>
                 <img
                   src="https://img.icons8.com/office/30/000000/user-male-circle.png"
-                />&nbsp;Abhishek Jaiswal : <span class="number-span">+91 8419925905</span>
+                />&nbsp;Abhishek Jaiswal :
+                <span class="number-span">+91 8419925905</span>
               </h4>
               <h4>
                 <img
                   src="https://img.icons8.com/office/30/000000/user-male-circle.png"
-                />&nbsp;Aditya Malviya : <span class="number-span"> +91 7021998679</span>
+                />&nbsp;Aditya Malviya :
+                <span class="number-span"> +91 7021998679</span>
               </h4>
             </div>
           </div>
