Updated Theme, Bug fixes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>XZIBIT-2020</title>
+    <title>XZIBIT-2K20</title>
     <link
       rel="icon"
       href="https://img.icons8.com/color/48/000000/x.png"
@@ -82,11 +82,12 @@
           </ul>
         </div>
         <div class="header-main">
-          <h1 class="header-main-text">xzibit</h1>
+          <img src="/xzibit_logo_white.png" alt="" class="" style="height:74px">
+          <!-- <h1 class="header-main-text">XZIBIT</h1> -->
           <p class="header-sub-text">KC college of engineering</p>
-          <p class="header-sub-text">10-11 February</p>
+          <p class="header-sub-text">March 27, 2020</p>
           <br />
-          <a href="#" class="btn-header">Register</a>
+          <a href="register.html" class="btn-header">Register</a>
         </div>
       </header>
 
@@ -116,15 +117,7 @@
               <img src="mech.svg" alt="" class="theme-img" />
             </div>
             <h4 class="text-center theme-card-header">
-              MECHANICAL / MECHATRONICS / AUTOMOBILES / PRODUCTION
-            </h4>
-          </div>
-          <div class="col-sm-12 col-md-3 theme-card">
-            <div class="text-center">
-              <img src="civil.svg" alt="" class="theme-img" />
-            </div>
-            <h4 class="text-center theme-card-header">
-              CIVIL / STRUCTURAL / ENVIRONMENT/ ARCHITECHTURE
+              MECHANICAL / MECHATRONICS /CIVIL / ARCHITECHTURE
             </h4>
           </div>
         </div>
@@ -146,6 +139,9 @@
               <h3 &#x20b9; class=" secondprize-rs">&#x20b9; 3000/-</h3>
             </div>
           </div>
+        </div>
+        <div class="row justify-content-center">
+          <h3>For each category, First prize and Second prize is categorized.</h3>
         </div>
       </section>
       <section class="rules-section" id="rules">
@@ -217,56 +213,46 @@
             <div class="accordion-container">
               <div class="set">
                 <a href="#">
-                  What is a “hackathon”?
+                  What is a “XZIBIT”?
                   <i class="fa fa-plus"></i>
                 </a>
                 <div class="content">
                   <p>
-                    A hackathon is usually a day long (can be 36 hours, 48
-                    hours, etc.) coding competition where software programmers,
-                    developers, designers, etc. come together to build and
-                    design something cool.
+                    XZIBIT is a national level project exhibition & competition organized by KCCEMSR under the banner of IETE, CSI & IIC.
+It is a national level event organised for students to showcase their engineering talent in front of the fast-paced world of technology.
                   </p>
                 </div>
               </div>
               <div class="set">
                 <a href="#">
-                  What do people normally make?
+                  Why xzibit ?
                   <i class="fa fa-plus"></i>
                 </a>
                 <div class="content">
                   <p>
-                    Hacks generally fall under one (or more) of the six
-                    cortices: Web Development, Android, iOS, AI/ML, AR/VR, and
-                    Game Development. Depending upon the problem statements,
-                    participants use any of the above.
+                    XZIBIT is a project competition which will let the students improve their technical knowledge and practical skills while working on a project. XZIBIT is a national level platform in which industry people will visit the stall and may offer direct internships and placement for selected students. Thus it is a Win-Win condition for students.
                   </p>
                 </div>
               </div>
               <div class="set">
                 <a href="#">
-                  What are the topics and prizes of hackathon?
+                  What is the limit of members in a single group ?
                   <i class="fa fa-plus"></i>
                 </a>
                 <div class="content">
                   <p>
-                    The topic and the prizes will be declared soon. So keep an
-                    eye on the CSI-KCCOE Facebook Page. Also once you've
-                    registered with an e-mail id , we'll shoot you a mail about
-                    further announcements.
+                    At the most , four members can be in a single group.
                   </p>
                 </div>
               </div>
               <div class="set">
                 <a href="#">
-                  Where and when is XHIBIT?
-
+                  Where will the XZIBIT be held and What is the date of competition ?
                   <i class="fa fa-plus"></i>
                 </a>
                 <div class="content">
                   <p>
-                    Anyone with the enthusiasm for coding can attend this
-                    hackathon. The hackathon is for all the undergrad coders.
+                    XZIBIT will be held within the campus of Excelssior Education Society's K.C. College Of Engineering & Management Studies & Research. It will be conducted on 27th of March 2020.
                   </p>
                 </div>
               </div>
@@ -277,7 +263,7 @@
             <div class="accordion-container">
               <div class="set">
                 <a href="#">
-                  Do you allow walk-ins?
+                  Do you allow walk-ins ?
 
                   <i class="fa fa-plus"></i>
                 </a>
@@ -290,43 +276,39 @@
               </div>
               <div class="set">
                 <a href="#">
-                  What if I've never been to a hackathon before?
+                  How much is the registration fees ?
                   <i class="fa fa-plus"></i>
                 </a>
                 <div class="content">
                   <p>
-                    Not to worry, We welcome students of all skill levels.
-                    Hackathons can be a great place to learn new skills in a
-                    short amount of time. Just be eager to learn, and excited to
-                    meet lots of awesome people.
+                    INR 350/-  (For Non IETE/CSI Members)
+                  </p>
+                  <p>
+                    INR 250/-  (Minimum 2 IETE/CSI Members in a group)
                   </p>
                 </div>
               </div>
               <div class="set">
                 <a href="#">
-                  How do teams work?
+                  What is the deadline for registration ?
 
                   <i class="fa fa-plus"></i>
                 </a>
                 <div class="content">
                   <p>
-                    You can work on a project on your own, or you can work with
-                    a team. Team size must not exceed four members.
+                    15th March 2020 is the last date for registering your team. So, what are you waiting for, Register now as the space is limited !
                   </p>
                 </div>
               </div>
               <div class="set">
                 <a href="#">
-                  What should I bring?
+                  What will the winners get ?
 
                   <i class="fa fa-plus"></i>
                 </a>
                 <div class="content">
                   <p>
-                    You should bring your student ID and anything you’d need for
-                    a sleepover: laptop, charger, deodorant (!), change of
-                    clothes, etc.. You won’t need food or drinks; we’ve got you
-                    covered there.
+                    For each category, First prize and Second prize is categorized as 5000/- and 3000/- respectively.
                   </p>
                 </div>
               </div>
