--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="#theme">Theme</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="#schedule">Schedule</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="#prize">Prize</a>
               </li>
