--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@
           </ul>
         </div>
         <div class="header-main">
-          <img src="/xzibit_logo_white.png" alt="" class="" style="height:74px">
+          <img
+            src="/xzibit_logo_white.png"
+            alt=""
+            class=""
+            style="height:74px"
+          />
           <!-- <h1 class="header-main-text">XZIBIT</h1> -->
           <p class="header-sub-text">KC college of engineering</p>
           <p class="header-sub-text">March 27, 2020</p>
@@ -140,8 +145,10 @@
             </div>
           </div>
         </div>
-        <div class="row justify-content-center">
-          <h3>For each category, First prize and Second prize is categorized.</h3>
+        <div class="row justify-content-center prize-context-row">
+          <h4 class="prize-context-col">
+            For each category, First prize and Second prize is categorized.
+          </h4>
         </div>
       </section>
       <section class="rules-section" id="rules">
@@ -218,8 +225,11 @@
                 </a>
                 <div class="content">
                   <p>
-                    XZIBIT is a national level project exhibition & competition organized by KCCEMSR under the banner of IETE, CSI & IIC.
-It is a national level event organised for students to showcase their engineering talent in front of the fast-paced world of technology.
+                    XZIBIT is a national level project exhibition & competition
+                    organized by KCCEMSR under the banner of IETE, CSI & IIC. It
+                    is a national level event organised for students to showcase
+                    their engineering talent in front of the fast-paced world of
+                    technology.
                   </p>
                 </div>
               </div>
@@ -230,7 +240,12 @@ It is a national level event organised for students to showcase their engineerin
                 </a>
                 <div class="content">
                   <p>
-                    XZIBIT is a project competition which will let the students improve their technical knowledge and practical skills while working on a project. XZIBIT is a national level platform in which industry people will visit the stall and may offer direct internships and placement for selected students. Thus it is a Win-Win condition for students.
+                    XZIBIT is a project competition which will let the students
+                    improve their technical knowledge and practical skills while
+                    working on a project. XZIBIT is a national level platform in
+                    which industry people will visit the stall and may offer
+                    direct internships and placement for selected students. Thus
+                    it is a Win-Win condition for students.
                   </p>
                 </div>
               </div>
@@ -247,12 +262,16 @@ It is a national level event organised for students to showcase their engineerin
               </div>
               <div class="set">
                 <a href="#">
-                  Where will the XZIBIT be held and What is the date of competition ?
+                  Where will the XZIBIT be held and What is the date of
+                  competition ?
                   <i class="fa fa-plus"></i>
                 </a>
                 <div class="content">
                   <p>
-                    XZIBIT will be held within the campus of Excelssior Education Society's K.C. College Of Engineering & Management Studies & Research. It will be conducted on 27th of March 2020.
+                    XZIBIT will be held within the campus of Excelssior
+                    Education Society's K.C. College Of Engineering & Management
+                    Studies & Research. It will be conducted on 27th of March
+                    2020.
                   </p>
                 </div>
               </div>
@@ -281,10 +300,10 @@ It is a national level event organised for students to showcase their engineerin
                 </a>
                 <div class="content">
                   <p>
-                    INR 350/-  (For Non IETE/CSI Members)
+                    INR 350/- (For Non IETE/CSI Members)
                   </p>
                   <p>
-                    INR 250/-  (Minimum 2 IETE/CSI Members in a group)
+                    INR 250/- (Minimum 2 IETE/CSI Members in a group)
                   </p>
                 </div>
               </div>
@@ -296,7 +315,9 @@ It is a national level event organised for students to showcase their engineerin
                 </a>
                 <div class="content">
                   <p>
-                    15th March 2020 is the last date for registering your team. So, what are you waiting for, Register now as the space is limited !
+                    15th March 2020 is the last date for registering your team.
+                    So, what are you waiting for, Register now as the space is
+                    limited !
                   </p>
                 </div>
               </div>
@@ -308,7 +329,8 @@ It is a national level event organised for students to showcase their engineerin
                 </a>
                 <div class="content">
                   <p>
-                    For each category, First prize and Second prize is categorized as 5000/- and 3000/- respectively.
+                    For each category, First prize and Second prize is
+                    categorized as 5000/- and 3000/- respectively.
                   </p>
                 </div>
               </div>
