--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>XZIBIT-2K20</title>
-    <link
-      rel="icon"
-      href="https://img.icons8.com/color/48/000000/x.png"
-      type="image/x-icon"
-    />
+    <link rel="icon" href="xzibit_logo.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -43,10 +39,8 @@
                 src="https://img.icons8.com/ultraviolet/40/000000/xbox-menu.png"
             /></span>
           </button>
-          <a class="navbar-brand" href="#"
-            ><img
-              src="https://image.flaticon.com/icons/svg/2497/2497424.svg"
-              width="50px"
+          <a class="navbar-brand" href="index.html"
+            ><img src="xzibit_logo.png" width="50px"
           /></a>
 
           <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
@@ -83,7 +77,7 @@
         </div>
         <div class="header-main">
           <img
-            src="/xzibit_logo_white.png"
+            src="xzibit_logo_final_psd.png"
             alt=""
             class=""
             style="height:74px"
