--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
             aria-label="Toggle navigation"
           >
             <span class="navbar-toggler-icon"
-              ><img
-                src="https://img.icons8.com/ultraviolet/40/000000/xbox-menu.png"
+              ><img src="https://img.icons8.com/officexs/35/000000/menu.png"
             /></span>
           </button>
           <a class="navbar-brand" href="index.html"
@@ -109,8 +108,6 @@
               CS/IT/ELECTRONICS & CS
             </h4>
           </div>
-        </div>
-        <div class="row justify-content-center card-row2">
           <div class="col-sm-12 col-md-3 theme-card">
             <div class="text-center">
               <img src="mech.svg" alt="" class="theme-img" />
@@ -141,7 +138,7 @@
         </div>
         <div class="row justify-content-center prize-context-row">
           <h4 class="prize-context-col">
-            For each category, First prize and Second prize is categorized.
+            For each category
           </h4>
         </div>
       </section>
