--- a/register.html
+++ b/register.html
@@ -13,170 +13,213 @@
     <link rel="stylesheet" href="register.css" />
   </head>
   <body>
-    <div class="container">
-      <form
-        class="container-fluid"
-        action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeyMys1WveMVZFnI5GSr1JDlK77tWrEUSwjfrR_zIJA_mFrpw/formResponse"
-        method="post"
-      >
-        <center><h1>Xzibit Form</h1></center>
-        <div class="form-group row">
-          <label for="leader-name" class="col-sm-10"
-            >Participant 1 (Team Leader)
-          </label>
-          <div class="col-sm-4">
-            <input
-              type="text"
-              name="entry.1582190385"
-              placeholder="Enter leader Name"
-            />
-          </div>
-          <div class="col-sm-4">
-            <input
-              type="email"
-              name="entry.20555551"
-              placeholder="Enter Email"
-            />
-          </div>
-          <div class="col-sm-4">
-            <input
-              type="text"
-              name="entry.269110403"
-              placeholder="Enter Mobile Number"
-            />
+    <div class="row justify-content-center ">
+      <div class="col-sm-12 col-md-10 form-section ">
+        <div class="row">
+          <div class="col-sm-12 col-lg-5 "></div>
+          <div class="col-sm-12 col-lg-7 formm">
+            <form
+              class="container-fluid"
+              action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeyMys1WveMVZFnI5GSr1JDlK77tWrEUSwjfrR_zIJA_mFrpw/formResponse"
+              method="post"
+            >
+              <h1 class="header-main-text">Xzibit Form</h1>
+              <div class="form-group row">
+                <label for="leader-name" class="col-sm-10 label"
+                  >Participant 1 (Team Leader)
+                </label>
+                <div class="col-sm-12 col-md-6">
+                  <input
+                    type="text"
+                    name="entry.1582190385"
+                    placeholder="  Enter leader Name"
+                  />
+                </div>
+                <div class="col-sm-12 col-md-6">
+                  <input
+                    type="email"
+                    name="entry.20555551"
+                    placeholder="  Enter Email"
+                  />
+                </div>
+                <div class="col-sm-12 col-md-12">
+                  <input
+                    type="text"
+                    name="entry.269110403"
+                    placeholder="  Enter Mobile Number"
+                  />
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="Participant-name-2" class="col-sm-10 label"
+                  >Participant 2
+                </label>
+                <div class="col-sm-12">
+                  <input
+                    type="text"
+                    name="entry.1121523007"
+                    placeholder="  Enter Participant Name"
+                  />
+                </div>
+                <div class="col-sm-12">
+                  <input
+                    type="email"
+                    name="entry.1191125097"
+                    placeholder="  Enter Email"
+                  />
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="Participant-name-3" class="col-sm-10 label"
+                  >Participant 3
+                </label>
+                <div class="col-sm-12">
+                  <input
+                    type="text"
+                    name="entry.1257126050"
+                    placeholder="  Enter Participant Name"
+                  />
+                </div>
+                <div class="col-sm-12">
+                  <input
+                    type="email"
+                    name="entry.1947491647"
+                    placeholder="  Enter Email"
+                  />
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="Participant-name-4" class="col-sm-10 label"
+                  >Participant 4
+                </label>
+                <div class="col-sm-6">
+                  <input
+                    type="text"
+                    name="entry.431990831"
+                    placeholder="  Enter Participant Name"
+                  />
+                </div>
+                <div class="col-sm-6">
+                  <input
+                    type="email"
+                    name="entry.1095055821"
+                    placeholder="  Enter Email"
+                  />
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="institute-name" class="col-sm-10 label"
+                  >Name of Institute
+                </label>
+                <div class="col-sm-12">
+                  <input
+                    type="text"
+                    name="entry.299214516"
+                    placeholder="  Enter Institute Name"
+                  />
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="project-title" class="col-sm-10 label"
+                  >Project Title
+                </label>
+                <div class="col-sm-12">
+                  <input
+                    type="text"
+                    name="entry.185442908"
+                    placeholder="  Enter Project Title"
+                  />
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="branch" class="col-sm-10  label"
+                  >Project Category
+                </label>
+                <div class="col-sm-12 col-md-6 radio-row">
+                  <div class="radio">
+                    <input
+                      id="radio-1"
+                      name="entry.682702766"
+                      value="Computer Science"
+                      type="radio"
+                    />
+                    <label for="radio-1" class="radio-label "
+                      >Computer Science</label
+                    >
+                  </div>
+                </div>
+                <div class="col-sm-12 col-md-6">
+                  <div class="radio">
+                    <input
+                      id="radio-2"
+                      name="entry.682702766"
+                      value="Electronics"
+                      type="radio"
+                    />
+                    <label for="radio-2" class="radio-label">Electronics</label>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="member-of-csi" class="col-sm-10  label"
+                  >Whether any two members of the group are a part of IETE or
+                  CSI
+                </label>
+                <div class="col-sm-12 radio-row">
+                  <div class="radio">
+                    <input
+                      id="radio-3"
+                      name="entry.2113721144"
+                      value="Yes"
+                      type="radio"
+                    />
+                    <label for="radio-3" class="radio-label ">Yes</label>
+                  </div>
+
+                  <div class="radio">
+                    <input
+                      id="radio-4"
+                      name="entry.2113721144"
+                      value="No"
+                      type="radio"
+                    />
+                    <label for="radio-4" class="radio-label">No</label>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="Membership-2" class="col-sm-10 label"
+                  >Enter the Membership Number, if member of IETE or CSI
+                  (Participant 1)
+                </label>
+                <div class="col-sm-12">
+                  <input
+                    type="text"
+                    name="entry.1003740088"
+                    placeholder="  Enter Membership Number"
+                  />
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="Membership-2" class="col-sm-12 label"
+                  >Enter the Membership Number, if member of IETE or CSI
+                  (Participant 2)
+                </label>
+                <div class="col-sm-12">
+                  <input
+                    type="text"
+                    name="entry.1747806996"
+                    placeholder="  Enter Membership Number"
+                  />
+                </div>
+              </div>
+              <button type="submit" class="submit-btn">
+                Submit
+              </button>
+            </form>
           </div>
         </div>
-        <div class="form-group row">
-          <label for="Participant-name-2" class="col-sm-10"
-            >Participant 2
-          </label>
-          <div class="col-sm-4">
-            <input
-              type="text"
-              name="entry.1121523007"
-              placeholder="Enter Participant Name"
-            />
-          </div>
-          <div class="col-sm-4">
-            <input
-              type="email"
-              name="entry.1191125097"
-              placeholder="Enter Email"
-            />
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="Participant-name-3" class="col-sm-10"
-            >Participant 3
-          </label>
-          <div class="col-sm-4">
-            <input
-              type="text"
-              name="entry.1257126050"
-              placeholder="Enter Participant Name"
-            />
-          </div>
-          <div class="col-sm-4">
-            <input
-              type="email"
-              name="entry.1947491647"
-              placeholder="Enter Email"
-            />
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="Participant-name-4" class="col-sm-10"
-            >Participant 4
-          </label>
-          <div class="col-sm-4">
-            <input
-              type="text"
-              name="entry.431990831"
-              placeholder="Enter Participant Name"
-            />
-          </div>
-          <div class="col-sm-4">
-            <input
-              type="email"
-              name="entry.1095055821"
-              placeholder="Enter Email"
-            />
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="institute-name" class="col-sm-10"
-            >Name of Institute
-          </label>
-          <div class="col-sm-4">
-            <input
-              type="text"
-              name="entry.299214516"
-              placeholder="Enter Institute Name"
-            />
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="project-title" class="col-sm-10">Project Title </label>
-          <div class="col-sm-4">
-            <input
-              type="text"
-              name="entry.185442908"
-              placeholder="Enter Project Title"
-            />
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="branch" class="col-sm-10">Project Category </label>
-          <div class="col-sm-4">
-            <input
-              type="radio"
-              name="entry.682702766"
-              value="Computer Science"
-            />Computer Science<br />
-            <input
-              type="radio"
-              name="entry.682702766"
-              value="Electronics"
-            />Electronics
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="member-of-csi" class="col-sm-10"
-            >Whether any two members of the group are a part of IETE or CSI
-          </label>
-          <div class="col-sm-4">
-            <input type="radio" name="entry.2113721144" value="Yes" />Yes<br />
-            <input type="radio" name="entry.2113721144" value="No" />No
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="Membership-2" class="col-sm-10"
-            >Enter the Membership Number, if member of IETE or CSI (Participant
-            1)
-          </label>
-          <div class="col-sm-4">
-            <input
-              type="text"
-              name="entry.1003740088"
-              placeholder="Enter Membership Number"
-            />
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="Membership-2" class="col-sm-10"
-            >Enter the Membership Number, if member of IETE or CSI (Participant
-            2)
-          </label>
-          <div class="col-sm-4">
-            <input
-              type="text"
-              name="entry.1747806996"
-              placeholder="Enter Membership Number"
-            />
-          </div>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+      </div>
     </div>
   </body>
 </html>
