--- a/register.html
+++ b/register.html
@@ -92,14 +92,14 @@
                 <label for="Participant-name-4" class="col-sm-10 label"
                   >Participant 4
                 </label>
-                <div class="col-sm-6">
+                <div class="col-sm-12">
                   <input
                     type="text"
                     name="entry.431990831"
                     placeholder="  Enter Participant Name"
                   />
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-12">
                   <input
                     type="email"
                     name="entry.1095055821"
@@ -194,7 +194,7 @@
                 </label>
                 <div class="col-sm-12">
                   <input
-                    type="text"
+                    type="number"
                     name="entry.1003740088"
                     placeholder="  Enter Membership Number"
                   />
@@ -207,9 +207,37 @@
                 </label>
                 <div class="col-sm-12">
                   <input
-                    type="text"
+                    type="number"
                     name="entry.1747806996"
                     placeholder="  Enter Membership Number"
+                  />
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="Membership-2" class="col-sm-12 label"
+                  >Payment Methods
+                </label>
+                <div class="row">
+                  <div class="col-sm-12 col-md-6 text-center">
+                    <img src="qr.jpeg" alt="" width="80%" />
+                  </div>
+                  <div class="col-sm-12 col-md-5 mt-2">
+                    <p class="payment-para">
+                      Scan this QR code to make the payment.
+                    </p>
+                    <p class="payment-para">
+                      INR 350/- (For Non IETE/CSI Members)
+                    </p>
+                    <p class="payment-para">
+                      INR 350/- (For Non IETE/CSI Members)
+                    </p>
+                  </div>
+                </div>
+                <div class="col-sm-12">
+                  <input
+                    type="text"
+                    name="entry.559684878"
+                    placeholder="   Enter Payment-Transaction ID"
                   />
                 </div>
               </div>
