--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="#rules">Rules</a>
               </li>
-              <!-- <li class="nav-item">
-                <a class="nav-link" href="#sponsor">Sponsors</a>
-              </li> -->
+              <li class="nav-item">
+                <a class="nav-link" href="#faq">FAQ</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact Us</a>
               </li>
