--- a/register.html
+++ b/register.html
@@ -232,7 +232,7 @@
                 <div class="col-sm-12 col-md-8 text-center">
                   <div class="payment-div">
                     <p class="payment-para">
-                      INR 350/- (For Non IETE/CSI Members)
+                      INR 250/- (Min. 2 IETE/CSI Members in group)
                     </p>
                     <p class="payment-para">
                       INR 350/- (For Non IETE/CSI Members)
