--- a/register.html
+++ b/register.html
@@ -57,7 +57,7 @@
                 <label for="Participant-name-2" class="col-sm-10 label"
                   >Participant 2
                 </label>
-                <div class="col-sm-12">
+                <div class="col-sm-12 col-md-6">
                   <input
                     type="text"
                     name="entry.1121523007"
@@ -65,7 +65,7 @@
                     required
                   />
                 </div>
-                <div class="col-sm-12">
+                <div class="col-sm-12 col-md-6">
                   <input
                     type="email"
                     name="entry.1191125097"
@@ -73,9 +73,17 @@
                     required
                   />
                 </div>
+                <div class="col-sm-12 col-md-12">
+                  <input
+                    type="number"
+                    name="entry.60051150"
+                    placeholder="  Enter Mobile Number"
+                    required
+                  />
+                </div>
               </div>
               <div class="form-group row">
-                <label for="Participant-name-3" class="col-sm-10 label"
+                <label for="Participant-name-3" class="col-sm-10" style="font-weight: 900;"
                   >Participant 3
                 </label>
                 <div class="col-sm-12">
@@ -96,7 +104,7 @@
                 </div>
               </div>
               <div class="form-group row">
-                <label for="Participant-name-4" class="col-sm-10 label"
+                <label for="Participant-name-4" class="col-sm-10" style="font-weight: 900;"
                   >Participant 4
                 </label>
                 <div class="col-sm-12">
@@ -177,7 +185,7 @@
                   CSI
                 </label>
                 <div class="col-sm-12 radio-row">
-                  <div class="radio">
+                  <div class="radio" id="csi-member-yes">
                     <input
                       id="radio-3"
                       name="entry.2113721144"
@@ -187,7 +195,7 @@
                     <label for="radio-3" class="radio-label ">Yes</label>
                   </div>
 
-                  <div class="radio">
+                  <div class="radio" id="csi-member-no">
                     <input
                       id="radio-4"
                       name="entry.2113721144"
@@ -198,30 +206,32 @@
                   </div>
                 </div>
               </div>
-              <div class="form-group row">
-                <label for="Membership-2" class="col-sm-10 label"
-                  >Enter the Membership Number, if member of IETE or CSI
-                  (Participant 1)
-                </label>
-                <div class="col-sm-12">
-                  <input
-                    type="number"
-                    name="entry.1003740088"
-                    placeholder="  Enter Membership Number"
-                  />
+              <div id="csi-member" style="display:none;">
+                <div class="form-group row">
+                  <label for="Membership-2" class="col-sm-10 label"
+                    >Enter the Membership Number, if member of IETE or CSI
+                    (Participant 1)
+                  </label>
+                  <div class="col-sm-12">
+                    <input
+                      type="number"
+                      name="entry.1003740088"
+                      placeholder="  Enter Membership Number"
+                    />
+                  </div>
                 </div>
-              </div>
-              <div class="form-group row">
-                <label for="Membership-2" class="col-sm-12 label"
-                  >Enter the Membership Number, if member of IETE or CSI
-                  (Participant 2)
-                </label>
-                <div class="col-sm-12">
-                  <input
-                    type="number"
-                    name="entry.1747806996"
-                    placeholder="  Enter Membership Number"
-                  />
+                <div class="form-group row">
+                  <label for="Membership-2" class="col-sm-12 label" 
+                    >Enter the Membership Number, if member of IETE or CSI
+                    (Participant 2)
+                  </label>
+                  <div class="col-sm-12">
+                    <input
+                      type="number"
+                      name="entry.1747806996"
+                      placeholder="  Enter Membership Number"
+                    />
+                  </div>
                 </div>
               </div>
               <div class="form-group row justify-content-center">
@@ -275,6 +285,28 @@
                   />
                 </div>
               </div>
+              <div>
+                <input id="term-check" type="checkbox" required/>
+                <span>By registering our exhibition using this form.You agree to our<a href="#" data-toggle="modal" data-target="#myModal"> term and condition.</a></span>
+                <div class="modal" id="myModal">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title">Term & Condition</h5>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                      </div>
+                      <div class="modal-body">
+                        No payment refund.
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                      </div>
+                      
+                    </div>
+                  </div>
+                </div>
+
+              </div>
               <div class="text-center">
                 <button type="submit" class="submit-btn">
                   Submit
@@ -285,5 +317,16 @@
         </div>
       </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script>
+      $('#csi-member-yes').click(function(){
+        $('#csi-member').show();
+      });
+      $('#csi-member-no').click(function(){
+        $('#csi-member').hide();
+      });
+    </script>
   </body>
 </html>
