terms and condition changes

--- a/register.html
+++ b/register.html
@@ -287,7 +287,7 @@
               </div>
               <div>
                 <input id="term-check" type="checkbox" required/>
-                <span>By registering our exhibition using this form.You agree to our<a href="#" data-toggle="modal" data-target="#myModal"> term and condition.</a></span>
+                <span>By registering you agree to our <a href="#" data-toggle="modal" data-target="#myModal">terms and conditions.</a></span>
                 <div class="modal" id="myModal">
                   <div class="modal-dialog">
                     <div class="modal-content">
@@ -296,7 +296,11 @@
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                       </div>
                       <div class="modal-body">
-                        No payment refund.
+                        *For registered team ,it is mandatory to attend XZIBIT.<br>
+                        *Participation Certificate will only be provided to those who attend XZIBIT.<br>
+                        *Refund will not be provided to the teams who remain absent on the day of XZIBIT.<br>
+                        *Registration fees is Rs.350.<br/>
+                        *If two or more participants of a team are CSI/IETE members then the registration fees is Rs.250.
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
