rules and category changes

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="#theme">Theme</a>
+                <a class="nav-link" href="#theme">Categories</a>
               </li>
               <!-- <li class="nav-item">
                 <a class="nav-link" href="#schedule">Schedule</a>
@@ -82,7 +82,7 @@
             style="height:74px"
           />
           <!-- <h1 class="header-main-text">XZIBIT</h1> -->
-          <p class="header-sub-text">KC college of engineering</p>
+          <p class="header-sub-text">K.C. College of Engineering and Management</p><p class="header-sub-text"> Studies & Research</p>
           <p class="header-sub-text">March 27, 2020</p>
           <br />
           <a href="register.html" class="btn-header">Register</a>
@@ -90,7 +90,7 @@
       </header>
 
       <section class="theme-section" id="theme">
-        <h1 class="theme-header">THEME</h1>
+        <h1 class="theme-header">Categories</h1>
         <div class="row justify-content-center">
           <div class="col-sm-12 col-md-3 theme-card">
             <div class="text-center">
@@ -149,23 +149,23 @@
             <div class="rule-wrapper">
               <h4>
                 <img src="https://img.icons8.com/color/20/000000/circled.png" />
-                Maximum 4 participants from each group is allowed.
+                In a team, a max of 4 and a min of 2 participants are allowed.
               </h4>
               <h4>
                 <img src="https://img.icons8.com/color/20/000000/circled.png" />
-                Working model for demonstration is required.
+                A working model for demonstration is required.
               </h4>
               <h4>
                 <img src="https://img.icons8.com/color/20/000000/circled.png" />
-                Judges decision will be final.
+                The decision made by the judges will be considered final.
               </h4>
               <h4>
                 <img src="https://img.icons8.com/color/20/000000/circled.png" />
-                Co-ordinators can also participate.
+                Event co-ordinators can also participate.
               </h4>
               <h4>
                 <img src="https://img.icons8.com/color/20/000000/circled.png" />
-                Every group should bring laptop for presentation.
+                Every group should carry their laptop(s) for presentation.
               </h4>
               <h4>
                 <img src="https://img.icons8.com/color/20/000000/circled.png" />
@@ -286,7 +286,7 @@
               </div>
               <div class="set">
                 <a href="#">
-                  How much is the registration fees ?
+                  How much is the registration fees per team?
                   <i class="fa fa-plus"></i>
                 </a>
                 <div class="content">
@@ -371,12 +371,15 @@
           </div>
         </div>
         <div class="text-center social-links">
-          <span
-            ><img src="https://img.icons8.com/color/44/000000/facebook-new.png"
-          /></span>
-          <span
-            ><img src="https://img.icons8.com/color/44/000000/instagram-new.png"
-          /></span>
+          <span>
+            <a href="https://m.facebook.com/Xzibit2K20-102308324717904/" target="_blank"><img src="https://img.icons8.com/color/44/000000/facebook-new.png"/></a>
+          </span>
+          <span>
+            <a href="https://www.instagram.com/xzibit2k20_/" target="_blank"><img src="https://img.icons8.com/color/44/000000/instagram-new.png"/></a>
+          </span>
+          <span>
+            <a href="https://www.linkedin.com/in/xzibit-kccemsr-8638861a3" target="_blank"><img src="https://img.icons8.com/color/48/000000/linkedin.png"></a>
+          </span>
         </div>
       </footer>
     </div>
