rules and category changes

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </header>
 
       <section class="theme-section" id="theme">
-        <h1 class="theme-header">Categories</h1>
+        <h1 class="theme-header">CATEGORIES</h1>
         <div class="row justify-content-center">
           <div class="col-sm-12 col-md-3 theme-card">
             <div class="text-center">
