rules and category changes

--- a/register.html
+++ b/register.html
@@ -160,6 +160,7 @@
                       name="entry.682702766"
                       value="EXTC/ ETRX/ BIOMEDICAL/ ELECTRICAL & ELECTRONICS"
                       type="radio"
+                      required
                     />
                     <label for="radio-1" class="radio-label "
                       >EXTC/ ETRX/ BIOMEDICAL/ ELECTRICAL & ELECTRONICS</label
@@ -200,6 +201,7 @@
                       name="entry.2113721144"
                       value="Yes"
                       type="radio"
+                      required
                     />
                     <label for="radio-3" class="radio-label ">Yes</label>
                   </div>
