--- a/register.html
+++ b/register.html
@@ -301,7 +301,7 @@
               </div>
               <div>
                 <input id="term-check" type="checkbox" required/>
-                <span>By registering you agree to our <a href="#" data-toggle="modal" data-target="#myModal">Terms and conditions.</a></span>
+                <span>I agree to <a href="#" data-toggle="modal" data-target="#myModal">terms and conditions.</a></span>
                 <div class="modal" id="myModal">
                   <div class="modal-dialog">
                     <div class="modal-content">
