--- a/register.html
+++ b/register.html
@@ -297,6 +297,7 @@
                     placeholder="   Enter Payment-Transaction ID"
                     required
                   />
+                  <p style="margin-left:7px;color:#757575;">Note: You can find the transaction reference ID in the SMS received from the bank or the UTR number on the app transaction page.</p>
                 </div>
               </div>
               <div>
