--- a/register.html
+++ b/register.html
@@ -28,6 +28,19 @@
             >
               <h1 class="header-main-text"><a class="link" href="index.html">Xzibit</a> Form</h1>
               <div class="form-group row">
+                <label for="team-name" class="col-sm-10 label"
+                  >Team Name
+                </label>
+                <div class="col-sm-12 col-md-6">
+                  <input
+                    type="text"
+                    name="entry.1885078118"
+                    placeholder="  Enter Team Name"
+                    required
+                  />
+                </div>
+              </div>
+              <div class="form-group row">
                 <label for="leader-name" class="col-sm-10 label"
                   >Participant 1 (Team Leader)
                 </label>
@@ -232,7 +245,7 @@
                   </div>
                 </div>
                 <div class="form-group row">
-                  <label for="Membership-2" class="col-sm-12 label" 
+                  <label for="Membership-2" class="col-sm-12 label"
                     >Enter the Membership Number, if member of IETE or CSI
                     (Participant 2)
                   </label>
@@ -320,7 +333,7 @@
                       <div class="modal-footer">
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
                       </div>
-                      
+
                     </div>
                   </div>
                 </div>
