--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
           </div>
         </nav>
 
-        <div class="timer">
+        <!--<div class="timer">
           <ul>
             <li class="timer-list"><span id="days"></span>Days</li>
             <li class="timer-list"><span id="hours"></span>Hours</li>
             <li class="timer-list"><span id="minutes"></span>Minutes</li>
             <li class="timer-list second"><span id="seconds"></span>Seconds</li>
           </ul>
-        </div>
+        </div>-->
         <div class="header-main">
           <img
             src="xzibit_logo_final_psd.png"
@@ -82,10 +82,11 @@
             style="height:74px"
           />
           <!-- <h1 class="header-main-text">XZIBIT</h1> -->
-          <p class="header-sub-text">K.C. College of Engineering and Management</p><p class="header-sub-text"> Studies & Research</p>
-          <p class="header-sub-text">March 27, 2020</p>
-          <br />
-          <a href="register.html" class="btn-header">Register</a>
+          <p class="header-sub-text">K.C. College of Engineering and Management Studies & Research</p>
+          <p class="header-sub-text">XZIBIT-2K20 is being postponed until further notice.</p>
+          <p class="header-sub-text">The new dates would be announced soon.</p>
+		  <br />
+          <!--<a href="register.html" class="btn-header">Register</a>-->
         </div>
       </header>
 
